--- a/public/css/admin/nav.css
+++ b/public/css/admin/nav.css
@@ -22,6 +22,7 @@ main {
   background-color: var(--bg-primary);
   transition: width 600ms ease;
   overflow: scroll;
+  z-index: 999999;
 }
 .navbar::-webkit-scrollbar {
   display: none;
@@ -119,7 +120,7 @@ main {
   }
 
   .navbar:hover {
-    width: 16rem;
+    width: 13rem;
   }
 
   .navbar:hover .link-text {
