--- a/views/admin/nav.ejs
+++ b/views/admin/nav.ejs
@@ -6,6 +6,13 @@
       </a>
     </li>
     <li class="nav-item">
+      <a href="/admin" class="nav-link">
+        <i class="fa-solid fa-chart-column"></i>
+        <span class="link-text">Dashboard</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
       <a href="/admin/users" class="nav-link">
         <i class="fa-solid fa-user-graduate"></i>
         <span class="link-text">Users</span>
