--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -1,132 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Security</title>
     <link rel="icon" href="images/DSK-JF-drak-transparent-logo.png" />
-    <link rel="stylesheet" href="../css/admin/security.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="//unpkg.com/bootstrap-select-country@4.0.0/dist/css/bootstrap-select-country.min.css"
-        type="text/css" />
+    <link rel="stylesheet" href="/css/admin/security.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="//unpkg.com/bootstrap-select-country@4.0.0/dist/css/bootstrap-select-country.min.css"
+      type="text/css"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container-xl px-4 mt-4">
-        <!-- Account page navigation-->
-        <nav class="nav nav-borders">
-            <a class="nav-link " href="/admin/editProfile">Profile</a>
-            <a class="nav-link active ms-0" href="#">Security</a>
-            <a class="nav-link" href="/admin/notifications">Notifications</a>
-        </nav>
-        <hr class="mt-0 mb-4" />
-        <div class="row">
-            <div class="col-xl-4">
-            </div>
+      <!-- Account page navigation-->
+      <nav class="nav nav-borders">
+        <a class="nav-link" href="/admin/settings">Profile</a>
+        <a class="nav-link active ms-0" href="#">Security</a>
+        <a class="nav-link" href="/admin/notifications">Notifications</a>
+      </nav>
+      <hr class="mt-0 mb-4" />
+      <div class="row">
+        <div class="col-xl-4"></div>
 
-            <div class="containerAll">
-                <div class="col-xl-8">
-                    <!-- Account details card-->
-                    <div class="card mb-4">
-                        <div class="card-header">Privacy and security</div>
-                        <div class="card-body">
-                            <form id="UpdateProfile_Form">
-                                <!-- Form Group (username)-->
-                                <div class="mb-3">
-                                    <label class="small mb-1" for="Username">Change Username (Changing your username can
-                                        have unintended side effects.)</label>
-                                    <br>
-                                    <button class="change_username" type="submit">
-                                        Change username
-                                    </button>
-                                    <span id="errorUsername" class="error"></span>
-                                </div>
-                                <!-- Form Row-->
-                                <div class="row gx-3 mb-3">
-                                    <!-- Form Group (first name)-->
-                                    <div class="col-md-6">
-                                        <label class="small mb-1" for="First Name">Two-Factor Authentication</label>
-                                        <br>
-                                        <a class="two-f-a" type="submit">
-                                            Edit Two-Factor Authentication Setting
-                                        </a>
-                                        <span id="errorFirstname" class="error"></span>
-                                    </div>
-                                </div>
-                                <!-- Form Group (email address)-->
-                                <div class="mb-3">
-                                    <label class="small mb-1" for="Email Address">Change Email address</label>
-                                    <input class="form-control" id="Email Address" type="email"
-                                        placeholder="Enter your new email address" value="" />
-                                    <span id="erroremail"></span>
-                                </div>
-                                <!-- Form Row-->
-                                <div class="row gx-3 mb-3">
-                                    <!-- Form Group (phone number)-->
-                                    <div class="col-md-6">
-                                        <label class="small mb-1" for="Phone">Change Phone number</label>
-                                        <input class="form-control" id="Phone" type="tel"
-                                            placeholder="Enter your new phone number" value="" />
-                                    </div>
-                                    <!-- Form Row-->
-                                    <div class="row gx-3 mb-3">
-                                        <!-- Form Group (Project)-->
-
-                                    </div>
-                                    <!-- Form Group (Password)-->
-                                    <div class="col-md-7">
-                                        <label class="small mb-1" for="Current Password">Current Password</label>
-                                        <input class="form-control" id="Current Password" type="Password"
-                                            name="Current Password" placeholder="Enter your Current Password"
-                                            value="" />
-                                        <span id="errorCurPassword" class="error"></span>
-                                    </div>
-                                    <div class="col-md-7">
-                                        <label class="small mb-1" for="New Password">New Password</label>
-                                        <input class="form-control" id="New Password" type="Password"
-                                            name="New Password" placeholder="Enter your New Password" value="" />
-                                        <span id="errorNewPassword" class="error"></span>
-                                    </div>
-                                    <div class="col-md-7">
-                                        <label class="small mb-1" for="Confirm Password">Confirm Password</label>
-                                        <input class="form-control" id="Confirm Password" type="Password"
-                                            name="Confirm Password" placeholder="Confirm your New Password" value="" />
-                                        <span id="errorConPassword" class="error"></span>
-                                    </div>
-                                </div>
-                                <!-- Save changes button-->
-                                <button class="btn btn-primary" type="submit">
-                                    Save changes
-                                </button>
-                                <button class="clear_btn" type="clear">
-                                    Clear
-                                </button>
-                            </form>
-                        </div>
+        <div class="containerAll">
+          <div class="col-xl-8">
+            <!-- Account details card-->
+            <div class="card mb-4">
+              <div class="card-header">Privacy and security</div>
+              <div class="card-body">
+                <form id="UpdateProfile_Form">
+                  <!-- Form Group (username)-->
+                  <div class="mb-3">
+                    <label class="small mb-1" for="Username"
+                      >Change Username (Changing your username can have
+                      unintended side effects.)</label
+                    >
+                    <br />
+                    <button class="change_username" type="submit">
+                      Change username
+                    </button>
+                    <span id="errorUsername" class="error"></span>
+                  </div>
+                  <!-- Form Row-->
+                  <div class="row gx-3 mb-3">
+                    <!-- Form Group (first name)-->
+                    <div class="col-md-6">
+                      <label class="small mb-1" for="First Name"
+                        >Two-Factor Authentication</label
+                      >
+                      <br />
+                      <a class="two-f-a" type="submit">
+                        Edit Two-Factor Authentication Setting
+                      </a>
+                      <span id="errorFirstname" class="error"></span>
                     </div>
-                </div>
+                  </div>
+                  <!-- Form Group (email address)-->
+                  <div class="mb-3">
+                    <label class="small mb-1" for="Email Address"
+                      >Change Email address</label
+                    >
+                    <input
+                      class="form-control"
+                      id="Email Address"
+                      type="email"
+                      placeholder="Enter your new email address"
+                      value=""
+                    />
+                    <span id="erroremail"></span>
+                  </div>
+                  <!-- Form Row-->
+                  <div class="row gx-3 mb-3">
+                    <!-- Form Group (phone number)-->
+                    <div class="col-md-6">
+                      <label class="small mb-1" for="Phone"
+                        >Change Phone number</label
+                      >
+                      <input
+                        class="form-control"
+                        id="Phone"
+                        type="tel"
+                        placeholder="Enter your new phone number"
+                        value=""
+                      />
+                    </div>
+                    <!-- Form Row-->
+                    <div class="row gx-3 mb-3">
+                      <!-- Form Group (Project)-->
+                    </div>
+                    <!-- Form Group (Password)-->
+                    <div class="col-md-7">
+                      <label class="small mb-1" for="Current Password"
+                        >Current Password</label
+                      >
+                      <input
+                        class="form-control"
+                        id="Current Password"
+                        type="Password"
+                        name="Current Password"
+                        placeholder="Enter your Current Password"
+                        value=""
+                      />
+                      <span id="errorCurPassword" class="error"></span>
+                    </div>
+                    <div class="col-md-7">
+                      <label class="small mb-1" for="New Password"
+                        >New Password</label
+                      >
+                      <input
+                        class="form-control"
+                        id="New Password"
+                        type="Password"
+                        name="New Password"
+                        placeholder="Enter your New Password"
+                        value=""
+                      />
+                      <span id="errorNewPassword" class="error"></span>
+                    </div>
+                    <div class="col-md-7">
+                      <label class="small mb-1" for="Confirm Password"
+                        >Confirm Password</label
+                      >
+                      <input
+                        class="form-control"
+                        id="Confirm Password"
+                        type="Password"
+                        name="Confirm Password"
+                        placeholder="Confirm your New Password"
+                        value=""
+                      />
+                      <span id="errorConPassword" class="error"></span>
+                    </div>
+                  </div>
+                  <!-- Save changes button-->
+                  <button class="btn btn-primary" type="submit">
+                    Save changes
+                  </button>
+                  <button class="clear_btn" type="clear">Clear</button>
+                </form>
+              </div>
             </div>
+          </div>
         </div>
-
-    </div>
-
+      </div>
     </div>
 
     <script src="./security.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
     <script src="//unpkg.com/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="//unpkg.com/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <!-- <script src="//unpkg.com/bootstrap-select@1.12.4/dist/js/bootstrap-select.min.js"></script>  -->
     <script src="//unpkg.com/bootstrap-select-country@4.0.0/dist/js/bootstrap-select-country.min.js"></script>
-</body>
-
+  </body>
 </html>
