--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -5,19 +5,171 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <link rel="stylesheet" href="css/admin/nav.css" />
-    <title>Admin-Dashboard</title>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/admin/nav.css" />
+    <title>Admin-Settings</title>
   </head>
   <body>
     <%- include("./nav.ejs") %>
     <main>
-      sd
+      <div class="container-xl px-4 mt-4">
+        <!-- Account page navigation-->
+        <nav class="nav nav-borders">
+          <a class="nav-link active ms-0" href="#">Profile</a>
+          <a class="nav-link" href="/admin/security">Security</a>
+          <a class="nav-link" href="/admin/notifications">Notifications</a>
+        </nav>
+        <hr class="mt-0 mb-4" />
+        <div class="row">
+          <div class="col-xl-4">
+            <!-- Profile picture card -->
+            <div class="card mb-4 mb-xl-0">
+              <div class="card-header">Profile Picture</div>
+              <div class="card-body text-center">
+                <form
+                  action="upload.php"
+                  method="post"
+                  enctype="multipart/form-data"
+                >
+                  <label for="fileToUpload">
+                    <div
+                      class="profile-pic"
+                      style="background-image: url('img/defaultPP.png')"
+                    >
+                      <span class="profilePicture"></span>
+                      <span>Change Image</span>
+                    </div>
+                  </label>
+                  <input type="File" name="fileToUpload" id="fileToUpload" />
+                </form>
+                <!-- Profile picture help block-->
+                <div class="small font-italic text-muted mb-4">
+                  JPG or PNG no larger than 5 MB
+                </div>
+                <!-- Profile picture upload button-->
+                <button class="btn btn-primary" type="button">
+                  Upload new image
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-8">
+            <!-- Account details card-->
+            <div class="card mb-4">
+              <div class="card-header">Account Details</div>
+              <div class="card-body">
+                <form id="UpdateProfile_Form">
+                  <!-- Form Group (username)-->
+                  <div class="mb-3">
+                    <label class="small mb-1" for="Username"
+                      >Username (How your name will appear to other users on the
+                      site)</label
+                    >
+                    <input
+                      class="form-control"
+                      id="Username"
+                      type="text"
+                      placeholder="Enter your username"
+                      value=""
+                    />
+                    <span id="errorUsername" class="error"></span>
+                  </div>
+                  <!-- Form Row-->
+                  <div class="row gx-3 mb-3">
+                    <!-- Form Group (first name)-->
+                    <div class="col-md-6">
+                      <label class="small mb-1" for="First Name"
+                        >First name</label
+                      >
+                      <input
+                        class="form-control"
+                        id="First Name"
+                        type="text"
+                        placeholder="Enter your first name"
+                        value=""
+                      />
+                      <span id="errorFirstname" class="error"></span>
+                    </div>
+                    <!-- Form Group (last name)-->
+                    <div class="col-md-6">
+                      <label class="small mb-1" for="Last Name"
+                        >Last name</label
+                      >
+                      <input
+                        class="form-control"
+                        id="Last Name"
+                        type="text"
+                        placeholder="Enter your last name"
+                        value=""
+                      />
+                      <span id="errorlastname" class="error"></span>
+                    </div>
+                  </div>
+                  <!-- Form Row        -->
+
+                  <!-- Form Group (email address)-->
+                  <div class="mb-3">
+                    <label class="small mb-1" for="Email Address"
+                      >Email address</label
+                    >
+                    <input
+                      class="form-control"
+                      id="Email Address"
+                      type="email"
+                      placeholder="Enter your email address"
+                      value=""
+                    />
+                  </div>
+                  <!-- Form Row-->
+                  <div class="row gx-3 mb-3">
+                    <!-- Form Group (phone number)-->
+                    <div class="col-md-6">
+                      <label class="small mb-1" for="Phone">Phone number</label>
+                      <input
+                        class="form-control"
+                        id="Phone"
+                        type="tel"
+                        placeholder="Enter your phone number"
+                        value=""
+                      />
+                    </div>
+                    <!-- Form Group (birthday)-->
+                    <div class="col-md-6">
+                      <label class="small mb-1" for="inputBirthday"
+                        >Birthday</label
+                      >
+                      <input
+                        class="form-control"
+                        id="inputBirthday"
+                        type="date"
+                        name="birthday"
+                        placeholder="Enter your birthday"
+                        value=""
+                      />
+                    </div>
+                  </div>
+                  <!-- Save changes button-->
+                  <button class="btn btn-primary" type="submit">
+                    Save changes
+                  </button>
+                  <button class="clear_btn" type="button">Clear</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
