signin , signup and forgotpassword ejs and css

--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -12,9 +12,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/registration/forgetpassword.css" />
+    <link rel="stylesheet" href="/public/css/registration/forgetpassword.css" />
     <title>Forgot password</title>
   </head>
+  <style>
+  </style>
   <body>
     <main>
       <section class="reset-passsword" id="emailPart">
@@ -36,11 +38,14 @@
       </section>
       <!-- ///////////////////////////////////////////////////////////// -->
       <section class="otp" id="otpPart">
-        <h1>Enter OTP</h1>
+        
+        <form>
+        <h1>Enter the OTP</h1>
         <div class="otp-field">
           <input type="text" maxlength="1" />
           <input type="text" maxlength="1" />
-          <input class="space" type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <div class="space">-</div>
           <input type="text" maxlength="1" />
           <input type="text" maxlength="1" />
           <input type="text" maxlength="1" />
@@ -52,7 +57,7 @@
         <p style="color: red" id="error2"></p>
         <div class="nextbtn">
           <button type="submit" id="next">Next</button>
-        </div>
+        </div> </form>
       </section>
       <!-- ////////////////////////////////////////////////////////////////// -->
       <section class="change-password" id="changePasswordPart">
@@ -235,6 +240,8 @@
           }
         }
       });
+
+
     </script>
   </body>
 </html>
