--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -12,13 +12,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/registration/signup.css" />
+    <link rel="stylesheet" href="/public/css/registration/signup.css" />
     <title>Sign up</title>
   </head>
   <body>
     <main>
       <form method="post" id="form" action="/signup/post">
-        <h1>Sign up !</h1>
+        <h1>First timer ?</h1>
+        <h1 id="signup">Create a new account now</h1>
         <div>
           <label for="firstName">First Name : </label>
           <input type="text" id="firstName" name="firstName" />
@@ -45,8 +46,10 @@
         <div>
           <button type="submit">Sign up</button>
         </div>
-        <a href="/login" class="sign-in">Already have an account ? Sign in</a>
-      </form>
+        <div class="signinanchor">
+        <a href="./signin.html" class="sign-in">Already have an account ? Sign in</a>
+    </div> 
+   </form>
     </main>
 
     <!-- eye -->
@@ -94,10 +97,8 @@
             });
             const data = await res.json();
             if (data.errMsg) error.innerHTML = data.errMsg;
-            else if (data.user.role === "admin") location.assign(`/admin`);
             else if (data.user)
               location.assign(`/${data.user.role}/${data.user._id}`);
-            else location.assign(`/404`);
           } catch (err) {
             console.log(err);
           }
