--- a/public/css/registration/login.css
+++ b/public/css/registration/login.css
@@ -1,126 +1,150 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  body {
-    background-image: url("/public/img/bg2.jpg");
-      background-repeat: no-repeat;
-      background-size: cover; 
-     }
-
- #login
-{
-font-size: 30px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-  form {
-    width: 400px;
-    background-color: rgba(255, 255, 255, 0.03);
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(25px);
-    border: 2px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-    padding: 30px 30px;
-  }
-  form * {
-    color: #ffffff;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-  }
-  form h1 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-  }
-  .signupanchor {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  }
-  .contanier {
-    display: flex;
-    gap: 10px;
-  }
-  label {
-    display: block;
-    margin-top: 8px;
-    font-size: 15px;
-    font-weight: 500;
-  }
-  input {
-    display: block;
-    height: 45px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-  }
-  
-  .container {
-    position: relative;
-  }
-  
-  .eye {
-    position: absolute;
-    top: 48%;
-    right:40px;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  
-  #closedEye {
-    display: none;
-  }
-  #error{
-      margin-top :24px;
-  }
-  
-  button {
-    margin: 20px 0;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: rgb(236, 235, 235);
-  }
-  
-  .forgotpass {
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 10px;
-  }
-  .social {
-    display: flex;
-    justify-content: center;
-  }
-  .social div{
-    margin: 10px 20px ;
-  }
-  .sign-in {
-    display: block;
-    color: white;
-    text-decoration: none;
-    font-size: 11px;
-    width: 100%;
-    margin-top: 10px;
-  }
-  .sign-in:hover {
-    text-decoration: underline;
-  }
- 
+body {
+  background-image: url("/img/bg2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #080710;
+  opacity: 0.7;
+  z-index: 1;
+}
+#login {
+  font-size: 30px;
+}
+form {
+  width: 400px;
+  background-color: rgba(255, 255, 255, 0.03);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  backdrop-filter: blur(25px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 30px 30px;
+  z-index: 2;
+}
+form * {
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
+}
+form h1,
+h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
+}
+.contanier {
+  display: flex;
+  gap: 10px;
+}
+label {
+  display: block;
+  margin-top: 8px;
+  font-size: 15px;
+  font-weight: 500;
+}
+input {
+  display: block;
+  height: 45px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+}
+.container {
+  position: relative;
+}
+.eye {
+  position: absolute;
+  top: 48%;
+  right: 40px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+#closedEye {
+  display: none;
+}
+.forgotpass {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 10px;
+}
+a {
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
+#error {
+  margin-top: 24px;
+}
+button {
+  margin: 20px 0;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgb(236, 235, 235);
+}
+.signupanchor {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+.social {
+  display: flex;
+  justify-content: center;
+}
+.social div {
+  margin: 10px 20px;
+}
+.sign-in {
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 11px;
+  width: 100%;
+  margin-top: 10px;
+}
+.sign-in:hover {
+  text-decoration: underline;
+}
+.google {
+  background-color: #db4437;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.facebook {
+  background-color: #4267b2;
+  padding: 10px 20px;
+  cursor: pointer;
+}
