--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Security</title>
-    <link rel="icon" href="images/DSK-JF-drak-transparent-logo.png" />
-    <link rel="stylesheet" href="/css/admin/security.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,8 +15,9 @@
       href="//unpkg.com/bootstrap-select-country@4.0.0/dist/css/bootstrap-select-country.min.css"
       type="text/css"
     />
+    <link rel="stylesheet" href="/css/admin/security.css" />
+    <title>Security</title>
   </head>
-
   <body>
     <div class="container-xl px-4 mt-4">
       <!-- Account page navigation-->
@@ -60,7 +58,7 @@
                       >
                       <br />
                       <a class="two-f-a" type="submit">
-                        Edit Two-Factor Authentication Setting
+                        Edit Two-Factor Authentication Settings
                       </a>
                       <span id="errorFirstname" class="error"></span>
                     </div>
@@ -154,21 +152,5 @@
         </div>
       </div>
     </div>
-
-    <script src="./security.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-    <script src="//unpkg.com/jquery@3.4.1/dist/jquery.min.js"></script>
-    <script src="//unpkg.com/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <!-- <script src="//unpkg.com/bootstrap-select@1.12.4/dist/js/bootstrap-select.min.js"></script>  -->
-    <script src="//unpkg.com/bootstrap-select-country@4.0.0/dist/js/bootstrap-select-country.min.js"></script>
   </body>
 </html>
