--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="//unpkg.com/bootstrap-select-country@4.0.0/dist/css/bootstrap-select-country.min.css"
+      type="text/css"
     />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Admin-Settings</title>
@@ -43,10 +41,7 @@
                   enctype="multipart/form-data"
                 >
                   <label for="fileToUpload">
-                    <div
-                      class="profile-pic"
-                      style="background-image: url('img/defaultPP.png')"
-                    >
+                    <div class="profile-pic">
                       <span class="profilePicture"></span>
                       <span>Change Image</span>
                     </div>
