--- a/public/css/registration/signup.css
+++ b/public/css/registration/signup.css
@@ -1,94 +1,108 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  body {
-    background-image: url("/public/img/bg2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;   }
-    #signup{
-      font-size: 25px;
-    }
-  form {
-    width: 400px;
-    background-color: rgba(255, 255, 255, 0.03);
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(25px);
-    border: 2px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-    padding: 30px 25px;
-  }
-  form * {
-    color: #ffffff;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-  }
-  form h1 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-  }
-  .signinanchor {
-    display: flex;
-    justify-content: center;
-    padding: 25px 0;
-  }
-  label {
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
-  }
-  input {
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-  }
-  .password-input {
-    position: relative;
-  }
-
-  .eye {
-    position: absolute;
-    top: 70%;
-    right:13px;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  
-  #closedEye {
-    display: none;
-  }
-  #error{
-    margin-top :24px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  background-image: url("/img/bg2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #080710;
+  opacity: 0.7;
+  z-index: 1;
+}
+#signup {
+  font-size: 25px;
+}
+form {
+  width: 400px;
+  background-color: rgba(255, 255, 255, 0.03);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  backdrop-filter: blur(25px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 30px 25px;
+  z-index: 2;
+}
+form * {
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
+}
+form h1 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
+}
+.signinanchor {
+  display: flex;
+  justify-content: center;
+  padding: 25px 0;
+}
+label {
+  display: block;
+  margin-top: 30px;
+  font-size: 16px;
+  font-weight: 500;
+}
+input {
+  display: block;
+  height: 50px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+}
+.password-input {
+  position: relative;
 }
 
-  button {
-    margin-top: 20px 0;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  button:hover{
-    background-color: rgb(236, 235, 235);
-  }
-  
+.eye {
+  position: absolute;
+  top: 70%;
+  right: 13px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+#closedEye {
+  display: none;
+}
+#error {
+  margin-top: 24px;
+}
+
+button {
+  margin-top: 20px 0;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgb(236, 235, 235);
+}
