--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -20,6 +20,7 @@
       <form method="post" id="form" action="/signup/post">
         <h1>First timer ?</h1>
         <h1 id="signup">Create a new account now</h1>
+        <div class="names">
         <div>
           <label for="firstName">First Name : </label>
           <input type="text" id="firstName" name="firstName" />
@@ -28,6 +29,7 @@
           <label for="lastName">Last Name : </label>
           <input type="text" id="lastName" name="lastName" />
         </div>
+      </div>
         <div>
           <label for="username">Username : </label>
           <input type="text" id="username" name="username" />
