--- a/public/css/registration/login.css
+++ b/public/css/registration/login.css
@@ -2,8 +2,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 body {
+  background-color: rgb(0, 0, 0);
   background-image: url("/img/bg2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -92,6 +94,7 @@ input {
   padding-top: 10px;
 }
 a {
+  font-size: 13px;
   text-decoration: none;
 }
 a:hover,
