--- a/public/css/registration/signup.css
+++ b/public/css/registration/signup.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 body {
+  background-color: rgb(0, 0, 0);
   background-image: url("/img/bg2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
