--- a/public/css/registration/signup.css
+++ b/public/css/registration/signup.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 body {
   background-color: rgb(0, 0, 0);
@@ -46,35 +47,26 @@ form * {
   outline: none;
   border: none;
 }
-form h1 {
+form h1,
+h2 {
   font-size: 32px;
   font-weight: 500;
   line-height: 42px;
   text-align: center;
 }
-.signinanchor {
-  display: flex;
-  justify-content: center;
-  padding: 25px 0;
-}
 label {
   display: block;
-  margin-top: 30px;
-  font-size: 16px;
+  margin-top: 8px;
+  font-size: 15px;
   font-weight: 500;
 }
 .names {
   display: flex;
+  gap: 10px;
 }
-
- .names div {
-  margin-right: 10px;
-} 
-
-
 input {
   display: block;
-  height: 50px;
+  height: 45px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.07);
   border-radius: 3px;
@@ -94,14 +86,25 @@ input {
   transform: translateY(-50%);
   cursor: pointer;
 }
-
 #closedEye {
   display: none;
 }
 #error {
   margin-top: 24px;
 }
-
+.signinanchor {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+a {
+  font-size: 13px;
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
 button {
   margin-top: 20px 0;
   width: 100%;
