--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="/css/registration/signup.css" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>Sign up</title>
   </head>
   <body>
@@ -45,6 +46,9 @@
           <i class="fa-regular fa-eye-slash eye" id="closedEye"></i>
         </div>
         <p style="color: red" id="error"></p>
+        <div class="recaptcha">
+          <div class="g-recaptcha" data-sitekey="6Le6QD4mAAAAADV5VfC2F0joiBbaA0kDAr0PyEQN"></div>
+        </div>
         <div class="signinanchor">
           <a href="/login">Already have an account ? Sign in</a>
         </div>
