--- a/views/registration/login.ejs
+++ b/views/registration/login.ejs
@@ -20,7 +20,7 @@
       <form method="POST" id="form" action="/login/post">
         <div>
           <h1>Welcome back</h1>
-          <h2 id="login">Log in!</h2>
+          <h2>Log in!</h2>
         </div>
         <div>
           <label for="username">Username : </label>
@@ -91,8 +91,7 @@
             });
             const data = await res.json();
             if (data.errMsg) error.innerHTML = data.errMsg;
-            else if (data.user.role === "admin")
-              location.assign(`/admin`);
+            else if (data.user.role === "admin") location.assign(`/admin`);
             else location.assign(`/${data.user.role}/${data.user._id}`);
           } catch (err) {
             console.log(err);
