--- a/views/admin/nav.ejs
+++ b/views/admin/nav.ejs
@@ -1,42 +1,42 @@
-<nav class="navbar">
-  <ul class="navbar-nav">
-    <li class="logo">
-      <a href="/admin" class="nav-link">
-        <span class="link-text logo-text">Admin</span>
+<nav class="navbarx">
+  <ul class="navbar-navx">
+    <li class="logox">
+      <a href="/admin" class="nav-linkx">
+        <span class="link-textx logo-textx">Admin</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a href="/admin" class="nav-link">
+    <li class="nav-itemx">
+      <a href="/admin" class="nav-linkx">
         <i class="fa-solid fa-chart-column"></i>
-        <span class="link-text">Dashboard</span>
+        <span class="link-textx">Dashboard</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a href="/admin/users" class="nav-link">
+    <li class="nav-itemx">
+      <a href="/admin/users" class="nav-linkx">
         <i class="fa-solid fa-user-graduate"></i>
-        <span class="link-text">Users</span>
+        <span class="link-textx">Users</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a href="/admin/courses" class="nav-link">
+    <li class="nav-itemx">
+      <a href="/admin/courses" class="nav-linkx">
         <i class="fa-solid fa-book"></i>
-        <span class="link-text">Courses</span>
+        <span class="link-textx">Courses</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a href="/admin/settings" class="nav-link">
+    <li class="nav-itemx">
+      <a href="/admin/settings" class="nav-linkx">
         <i class="fa-solid fa-gear"></i>
-        <span class="link-text">Settings</span>
+        <span class="link-textx">Settings</span>
       </a>
     </li>
 
-    <li class="nav-item" id="themeButton">
-      <a href="/logout" class="nav-link">
+    <li class="nav-itemx" id="themeButton">
+      <a href="/logout" class="nav-linkx">
         <i class="fa-solid fa-right-from-bracket"></i>
-        <span class="link-text">Log out </span>
+        <span class="link-textx">Log out </span>
       </a>
     </li>
   </ul>
