--- a/public/css/admin/users.css
+++ b/public/css/admin/users.css
@@ -286,20 +286,30 @@ header {
     font-size: 14px;
     margin-right: 10px;
   }
-  /* pagination */
-  .pagination {
+   /* pagination */
+   .pagination {
+    display: flex;
+    color:#383838 ;
+    padding: 10px 40px;
+    border-radius: 6px;
+  }
+  
+ .pagination ul li{
     display: inline-block;
+    margin: 0 10px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 40px;
+    cursor: pointer;
+    /* background-position: 0 -45px; */
+    /* transition: background-position 0.5s; */
   }
-  .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  .pagination a .active {
-    background-color: #4caf50;
-    color: white;
-  }
-  .pagination a:hover:not(.active) {
-    background-color: #ddd;
+   ul li.active{
+    color: #fff;
+    background-color: rgb(32, 101, 209);
+    /* background-position: 0 0; */
   }
